added simple styling

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="calendar">
-      <button id="leftButton">left</button>
-      <br />
-      <button id="rightButton">right</button>
+    <div class="calendarContainer">
+      <div class="buttonGroup">
+        <button id="leftButton">left</button>
+        <button id="rightButton">right</button>
+      </div>
       <table id="table-calendar"></table>
     </div>
 
